[package]
name = "cargo-loom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1"
cargo_metadata = "0.14"
clap = { version = "3", features = ["derive", "env"] }
clap-cargo = { version = "0.8", features = ["cargo_metadata"] }
color-eyre = "0.6"
escargot = { version = "0.5.7", features = ["test_unstable"] }
serde = "1"
owo-colors = {version = "3.4.0", features = ["supports-colors"] }