[package]
name = "cargo-loom"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"
repository = "https://github.com/hawkw/cargo-loom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
camino = "1"
cargo_metadata = "0.14"
clap = { version = "3", features = ["derive", "env"] }
clap-cargo = { version = "0.8", features = ["cargo_metadata"] }
color-eyre = { version = "0.6", features = ["issue-url"] }
escargot = { version = "0.5.7", features = ["test_unstable"] }
heck = "0.3.3"
serde = "1"
owo-colors = {version = "3.4.0", features = ["supports-colors"] }
tracing = "0.1.23"
tracing-subscriber = { version = "0.3.1", features = ["env-filter", "json"] }
tokio = { version = "1.18", features = ["full"] }
serde_json = "1"